--- a/ansible/postgresOptimization.yaml
+++ b/ansible/postgresOptimization.yaml
@@ -3,6 +3,19 @@
   hosts: all
   become: true
   tasks:
+      - name: update nodes
+      become: true
+      apt:
+        update_cache: yes
+        
+      - name: Install postgresql postgresql-contrib
+      become: true
+      apt:
+        name: "{{ item }}"
+        state: present
+      loop:
+        - postgresql
+        - postgresql-contrib
     - name: Stop PostgreSQL if already running
       become: true
       shell: |
