--- a/ansible/postgress_install.yaml
+++ b/ansible/postgress_install.yaml
@@ -116,12 +116,19 @@
         regexp: "^max_connections = "
         line: max_connections = 256
 
-    - name: Update shared_buffer in postgresql.conf
+    - name: Update shared_buffer in ubuntu postgresql.conf
       ansible.builtin.lineinfile:
         path: /var/lib/postgresql/14/main/postgresql.conf
         regexp: "^shared_buffers = "
         line: shared_buffers = 4096MB
-      notify: Reload PostgreSQL
+      notify: Reload PostgreSQL1
+
+      - name: Update shared_buffer in Redhat postgresql.conf
+      ansible.builtin.lineinfile:
+        path: /var/lib/postgresql/14/main/postgresql.conf
+        regexp: "^shared_buffers = "
+        line: shared_buffers = 4096MB
+      notify: Reload PostgreSQL2
 
     - name: Edit postgres.conf
       lineinfile:
@@ -167,13 +174,13 @@
       ignore_errors: true
 
   handlers:
-    - name: Reload PostgreSQL (Ubuntu)
+    - name: Reload PostgreSQL1
       ansible.builtin.service:
         name: postgresql
         state: reloaded
       when: ansible_distribution == 'Ubuntu'
 
-    - name: Reload PostgreSQL (Red Hat)
+    - name: Reload PostgreSQL2
       ansible.builtin.systemd:
         name: postgresql
         state: reloaded
